--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -8,7 +8,9 @@ FetchContent_MakeAvailable(googletest)
 
 # Test files
 set(TEST_SOURCES
+    mat_test.cpp
     operations_test.cpp
+    main.cpp
 )
 
 # Test executable
@@ -18,7 +20,3 @@ target_include_directories(tests PRIVATE ${CMAKE_SOURCE_DIR}/src)
 
 # Link Google Test to the test executable
 target_link_libraries(tests gtest gtest_main image)
-
-# Add a test target
-add_test(NAME SobelTest COMMAND tests)
-
